# nameforge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  WARP.md
.github/workflows/: ci.yml  release.yml
homebrew/: nameforge.rb
scripts/: release.sh
src/: ai.rs  cache.rs  exif.rs  gps.rs  lib.rs  main.rs  utils.rs
