[package]
name = "nameforge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nameforge"
path = "src/main.rs"

[[bin]]
name = "nf"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
kamadak-exif = "0.6.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
colored = "2.0"
image = "0.24"
