[package]
name = "nameforge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Intelligent photo renaming tool with AI content analysis and GPS location resolution"
readme = "README.md"
homepage = "https://github.com/frontmesh/nameforge"
repository = "https://github.com/frontmesh/nameforge"
documentation = "https://github.com/frontmesh/nameforge"
keywords = ["photo", "rename", "ai", "gps", "exif"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [
    "/.github",
    "/tests",
    "*.jpg",
    "*.jpeg",
    "*.png"
]

[[bin]]
name = "nameforge"
path = "src/main.rs"

[[bin]]
name = "nf"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
kamadak-exif = "0.6.1"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
colored = "2.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }

[profile.release]
# Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
